Make spacing fixes

--- a/rsrc/styles.css
+++ b/rsrc/styles.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: Courier, monospace;
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 /* Header */
@@ -13,7 +13,6 @@
 .site-name,
 .period {
     font-size: 70px;
-    font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     letter-spacing: -3px;
 }
@@ -23,7 +22,6 @@
     background-color: rgb(11, 11, 11);
 }
     .site-name a {
-        font-family: Arial, Helvetica, sans-serif;
         color: rgb(247, 247, 247);
         text-decoration: none;
     }
@@ -64,10 +62,10 @@
 /* Body */
 h1 {
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 40px;
     letter-spacing: -3px;
     padding: 10px;
+    margin: 10px auto 30px;
 }
 
 .content {
@@ -77,7 +75,6 @@ h1 {
 
 p {
     margin: 10px 0px;
-    letter-spacing: -1px;
 }
 /* Body */
 
@@ -140,30 +137,36 @@ h2 {
 .recipe-container {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
     justify-content: center;
 }
-
-.ingredients {
-    background-color: rgb(255, 196, 0);
-    border: 3px dashed black;
-}
-    .ingredients input {
-    margin-right: 15px;
-    }
 
 .ingredients,
 .instructions {
     margin: 20px;
     padding: 20px;
 }
+
+.ingredients {
+    background-color: rgb(255, 196, 0);
+    border: 3px dashed black;
+    flex: .3;
+}
+    .ingredients input {
+    margin-right: 15px;
+    }
     .ingredients ul {
         list-style-type: none;
     }
     .ingredients li {
-        margin: 5px 10px
+        margin: 10px 10px;
     }
+
+.instructions {
+    flex: .7;
+}
     .instructions li {
-        margin: 5px 0 5px 40px;
+        margin: 5px 0 10px 40px;
     }
 /* Recipes */
 
